--- a/public/landing_page/css/style.css
+++ b/public/landing_page/css/style.css
@@ -473,6 +473,15 @@ p {
   background-position: center center;
 }
 
+.kontak-bg {
+  background-image: url("../images/bg-layout.png");
+  background-color: #0e6cff;
+  position: relative;
+  background-size: cover;
+  height: 150vh;
+  background-position: center center;
+}
+
 .home-2-bg {
   background-image: url("../images/home-2-bg.png");
   background-color: #0e6cff;
